Added three links to the index.html linking to the three recipes pages

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <p><a href="./recipes/chicken_wantons.html">Chicken Watons Recipe</a></p>
+    <p>
+      <a href="./recipes/curry_chicken_salad.html"
+        >Curry Chicken Salad Recipe</a
+      >
+    </p>
+    <p><a href="./recipes/sesame_noodles.html">Sesame Noodles Recipe</a></p>
   </body>
 </html>
